--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,9 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="width_8">8dp</dimen>
 
+    <dimen name="margin_450">450dp</dimen>
+    <dimen name="margin_400">400dp</dimen>
+    <dimen name="margin_350">350dp</dimen>
     <dimen name="margin_96">96dp</dimen>
     <dimen name="margin_64">64dp</dimen>
     <dimen name="margin_56">56dp</dimen>
@@ -79,6 +82,7 @@
     <dimen name="card_radius_14dp">14dp</dimen>
     <dimen name="card_radius_20dp">20dp</dimen>
 
+    <dimen name="font_50">50sp</dimen>
     <dimen name="font_40">40sp</dimen>
     <dimen name="font_36">36sp</dimen>
     <dimen name="font_28">28sp</dimen>
