--- a/app/src/main/res/layout/activity_on_boarding.xml
+++ b/app/src/main/res/layout/activity_on_boarding.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OnBoardingActivity">
+    tools:context=".ui.base.OnBoardingActivity">
 
  <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/imageOnBoard"
@@ -51,7 +51,7 @@
         android:layout_height="@dimen/default_button"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginHorizontal="@dimen/margin_48"
-        android:background="@color/color_button"
+        android:background="@color/color_primary"
         android:text="@string/str_get_started"
         android:textColor="@color/color_white"
         android:layout_marginVertical="@dimen/margin_450"/>
