--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,6 +22,7 @@
     <dimen name="margin_4">4dp</dimen>
     <dimen name="margin_2">2dp</dimen>
     <dimen name="margin_1">1dp</dimen>
+    <dimen name="margin_0">0dp</dimen>
 
     <dimen name="padding_64">64dp</dimen>
     <dimen name="padding_56">56dp</dimen>
