--- a/app/src/main/res/layout/activity_on_boarding.xml
+++ b/app/src/main/res/layout/activity_on_boarding.xml
@@ -51,7 +51,7 @@
         android:layout_height="@dimen/default_button"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginHorizontal="@dimen/margin_48"
-        android:background="@color/color_primary"
+        android:background="@drawable/curve"
         android:text="@string/str_get_started"
         android:textColor="@color/color_white"
         android:layout_marginVertical="@dimen/margin_450"/>
