--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/color_primary"
+    android:background="@color/color_white"
     android:padding="@dimen/padding_8"
     tools:context=".ui.login.LoginFragment">
 
@@ -123,13 +123,6 @@
         android:textColor="@color/color_white"
         android:layout_marginVertical="@dimen/margin_14"/>
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/CreateAcount"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/str_create"
-        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
-        tools:layout_editor_absoluteX="42dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
