--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -105,23 +105,44 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/default_button"
         app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
-        android:layout_marginHorizontal="@dimen/margin_48"
+        android:layout_marginHorizontal="@dimen/margin_92"
         android:background="@drawable/curve"
         android:text="@string/str_login"
         android:textColor="@color/color_white"
         android:layout_marginVertical="@dimen/margin_64"/>
 
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/buttonSingUp"
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/textTitleSignup"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/default_button"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_36"
+        android:layout_marginVertical="@dimen/margin_10"
+        android:text="@string/str_SignUp"
+        android:textColor="@color/color_SingUpcolor"
+        android:textSize="@dimen/font_14"
+        android:maxLines="2"
+        android:ellipsize="end"
+        android:textAlignment="textEnd"
         app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
-        android:layout_marginHorizontal="@dimen/margin_48"
-        android:background="@drawable/curve"
-        android:text="@string/str_SingUp"
-        android:textColor="@color/color_white"
-        android:layout_marginVertical="@dimen/margin_14"/>
+        android:onClick="onMyButtonClick"
+        />
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/textTitleSignuptext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_96"
+        android:layout_marginVertical="@dimen/margin_10"
+        android:text="@string/str_SignUptext"
+        android:textColor="@color/color_black"
+        android:textSize="@dimen/font_14"
+        android:maxLines="2"
+        android:ellipsize="end"
+        android:textAlignment="textEnd"
+        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
+        />
+
 
 
 
