--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="color_white">#FFFFFFFF</color>
     <color name="color_primary">#282828</color>
     <color name="color_primary_light">#696969</color>
-
+    <color name="color_SingUpcolor">#0544F4</color>
 </resources>
