--- a/app/src/main/res/navigation/login_nav_graph.xml
+++ b/app/src/main/res/navigation/login_nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/LoginFragment"
         android:name="mrkinfotech.fitkart.ui.login.LoginFragment"
-        android:label="@string/first_fragment_label"
+        android:label="@string/home_lable"
         tools:layout="@layout/fragment_login">
 
         <action
@@ -23,6 +23,6 @@
 
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
+            app:destination="@id/HomeFragment" />
     </fragment>
 </navigation>
