Signup page create

--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.login.SignUpFragment">
+    android:background="@color/color_white"
+    android:padding="@dimen/padding_8"
+    tools:context=".ui.login.LoginFragment">
+
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageLogo"
         android:layout_width="@dimen/default_image_size_144dp"
@@ -33,12 +36,12 @@
         />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/textTitleLogin"
+        android:id="@+id/textTitleSignUp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/margin_48"
         android:layout_marginVertical="@dimen/margin_64"
-        android:text="@string/str_login"
+        android:text="@string/str_SignUp"
         android:textColor="@color/color_black"
         android:textSize="@dimen/font_24"
         android:maxLines="2"
@@ -47,6 +50,30 @@
         android:textAlignment="center"
         app:layout_constraintTop_toBottomOf="@+id/imageLogo"
         />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/textTitleUserName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_16"
+        android:layout_marginVertical="@dimen/margin_36"
+        android:text="@string/str_Username"
+        android:textColor="@color/color_black"
+        android:textSize="@dimen/font_18"
+        android:maxLines="2"
+        android:ellipsize="end"
+        app:layout_constraintTop_toBottomOf="@+id/textTitleSignUp"
+        />
+
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/editTextUserName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/color_white"
+        android:background="@color/color_primary"
+        android:inputType="textEmailAddress"
+        android:layout_marginTop="@dimen/margin_8"
+        app:layout_constraintTop_toBottomOf="@+id/textTitleUserName"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textTitleEmail"
@@ -59,7 +86,7 @@
         android:textSize="@dimen/font_18"
         android:maxLines="2"
         android:ellipsize="end"
-        app:layout_constraintTop_toBottomOf="@+id/textTitleLogin"
+        app:layout_constraintTop_toBottomOf="@+id/editTextUserName"
         />
 
     <androidx.appcompat.widget.AppCompatEditText
@@ -71,6 +98,8 @@
         android:inputType="textEmailAddress"
         android:layout_marginTop="@dimen/margin_8"
         app:layout_constraintTop_toBottomOf="@+id/textTitleEmail"/>
+
+
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textTitlePassword"
@@ -104,7 +133,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
         android:layout_marginHorizontal="@dimen/margin_92"
         android:background="@drawable/curve"
-        android:text="@string/str_login"
+        android:text="@string/str_SignUp"
         android:textColor="@color/color_white"
         android:layout_marginVertical="@dimen/margin_64"/>
 
@@ -114,9 +143,9 @@
         android:id="@+id/textTitleSignup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/margin_36"
+        android:layout_marginHorizontal="@dimen/margin_96"
         android:layout_marginVertical="@dimen/margin_10"
-        android:text="@string/str_SignUp"
+        android:text="@string/str_login"
         android:textColor="@color/color_SingUpcolor"
         android:textSize="@dimen/font_14"
         android:maxLines="2"
@@ -129,16 +158,17 @@
         android:id="@+id/textTitleSignuptext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/margin_96"
+        android:layout_marginHorizontal="@dimen/margin_106"
         android:layout_marginVertical="@dimen/margin_10"
         android:text="@string/str_SignUptext"
         android:textColor="@color/color_black"
         android:textSize="@dimen/font_14"
         android:maxLines="2"
         android:ellipsize="end"
-        android:textAlignment="textEnd"
         app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
         />
 
 
-</FrameLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
