--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -11,7 +11,7 @@
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageLogo"
         android:layout_width="@dimen/default_image_size_144dp"
-        android:layout_height="@dimen/default_image_size_144dp"
+        android:layout_height="@dimen/default_image_size_96dp"
         android:src="@drawable/ic_app_logo"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +68,7 @@
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/editTextUserName"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/default_edit_text_height"
         android:textColor="@color/color_white"
         android:background="@color/color_primary"
         android:inputType="textEmailAddress"
@@ -92,7 +92,7 @@
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/editTextEmail"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/default_edit_text_height"
         android:textColor="@color/color_white"
         android:background="@color/color_primary"
         android:inputType="textEmailAddress"
@@ -118,7 +118,7 @@
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/editTextPassword"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/default_edit_text_height"
         android:background="@color/color_primary"
         android:inputType="numberPassword"
         android:layout_marginTop="@dimen/margin_8"
@@ -137,13 +137,25 @@
         android:textColor="@color/color_white"
         android:layout_marginVertical="@dimen/margin_64"/>
 
-
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/textTitleSignuptext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_106"
+        android:layout_marginVertical="@dimen/margin_10"
+        android:text="@string/str_textview"
+        android:textColor="@color/color_black"
+        android:textSize="@dimen/font_14"
+        android:maxLines="2"
+        android:ellipsize="end"
+        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp"
+        />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textTitleSignup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/margin_96"
+        android:layout_marginHorizontal="@dimen/margin_90"
         android:layout_marginVertical="@dimen/margin_10"
         android:text="@string/str_login"
         android:textColor="@color/color_SingUpcolor"
@@ -154,19 +166,7 @@
         app:layout_constraintTop_toBottomOf="@+id/buttonSignUp"
         android:onClick="onMyButtonClick"
         />
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/textTitleSignuptext"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/margin_106"
-        android:layout_marginVertical="@dimen/margin_10"
-        android:text="@string/str_SignUptext"
-        android:textColor="@color/color_black"
-        android:textSize="@dimen/font_14"
-        android:maxLines="2"
-        android:ellipsize="end"
-        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp"
-        />
+
 
 
 
