--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -18,14 +18,12 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/imageLogo"
-            android:layout_width="@dimen/default_image_size_144dp"
-            android:layout_height="@dimen/default_image_size_144dp"
-            android:layout_marginStart="4dp"
+            android:layout_width="@dimen/default_image_size_74dp"
+            android:layout_height="@dimen/default_image_size_74dp"
             android:src="@drawable/ic_app_logo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/textAppTitle"
@@ -47,15 +45,15 @@
             android:id="@+id/textAppSlogan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_0"
             android:maxLines="1"
             android:text="Gym Equipments"
             android:textColor="@color/color_white"
-            android:textSize="@dimen/font_16"
+            android:textSize="@dimen/font_14"
+            android:layout_marginTop="@dimen/margin_0"
             app:layout_constraintBottom_toBottomOf="@+id/imageLogo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="36"
+            app:layout_constraintEnd_toEndOf="@id/textAppTitle"
             app:layout_constraintStart_toEndOf="@+id/imageLogo"
-            app:layout_constraintTop_toBottomOf="@+id/textAppTitle" />
+            app:layout_constraintTop_toBottomOf="@+id/textAppTitle"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
