--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/margin_48"
         android:layout_marginVertical="@dimen/margin_0"
-        android:text="@string/str_name"
+        android:text="@string/app_name"
         android:textColor="@color/color_black"
         android:textSize="@dimen/font_40"
         android:maxLines="2"
