--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -164,6 +164,7 @@
         android:ellipsize="end"
         android:textAlignment="textEnd"
         app:layout_constraintTop_toBottomOf="@+id/buttonSignUp"
+        android:onClick="onMyButtonClick"
         />
 
 
